--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,5 +18,25 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: #ffffff;
+}
+
+#navbar {
+  background-color: #861F41;
+  text-shadow: -1px 1px 4px black;
+  font-weight: 600;
+}
+
+#logout {
+  background-color: #E5751F !important;
+  border: none !important;
+  border-radius: 0% !important;
+  font-weight: 600;
+  text-shadow: -1px 1px 4px black;
+  margin: 10px 20px 10px 0px !important;
+  box-shadow: -3px 3px 2px rgba(59, 58, 58, 0.705);
+}
+
+#logo {
+  margin-left: 20px !important;
 }
